--- a/designPredprof.ui
+++ b/designPredprof.ui
@@ -7,20 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>1250</width>
-    <height>1250</height>
+    <height>1064</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>WheatDetector</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="btnRun">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>1050</y>
-      <width>471</width>
-      <height>121</height>
+      <x>390</x>
+      <y>910</y>
+      <width>470</width>
+      <height>120</height>
      </rect>
     </property>
     <property name="font">
@@ -36,9 +36,9 @@
     <property name="geometry">
      <rect>
       <x>450</x>
-      <y>270</y>
-      <width>351</width>
-      <height>71</height>
+      <y>265</y>
+      <width>350</width>
+      <height>70</height>
      </rect>
     </property>
     <property name="font">
@@ -54,9 +54,9 @@
     <property name="geometry">
      <rect>
       <x>500</x>
-      <y>360</y>
-      <width>251</width>
-      <height>31</height>
+      <y>355</y>
+      <width>250</width>
+      <height>30</height>
      </rect>
     </property>
     <property name="font">
@@ -74,10 +74,10 @@
    <widget class="QPushButton" name="btnPhotoUpload">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>840</y>
-      <width>351</width>
-      <height>71</height>
+      <x>450</x>
+      <y>780</y>
+      <width>350</width>
+      <height>70</height>
      </rect>
     </property>
     <property name="font">
@@ -92,9 +92,9 @@
    <widget class="QLabel" name="lblPhoto">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>930</y>
-      <width>251</width>
+      <x>510</x>
+      <y>860</y>
+      <width>250</width>
       <height>30</height>
      </rect>
     </property>
@@ -113,10 +113,10 @@
    <widget class="QLabel" name="lblSquare_2">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>220</y>
-      <width>1081</width>
-      <height>31</height>
+      <x>125</x>
+      <y>200</y>
+      <width>1000</width>
+      <height>30</height>
      </rect>
     </property>
     <property name="font">
@@ -134,10 +134,10 @@
    <widget class="QLabel" name="lblSquare_3">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>450</y>
-      <width>821</width>
-      <height>371</height>
+      <x>220</x>
+      <y>400</y>
+      <width>820</width>
+      <height>351</height>
      </rect>
     </property>
     <property name="font">
@@ -155,10 +155,10 @@
    <widget class="QComboBox" name="comboBox">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>240</x>
       <y>50</y>
-      <width>771</width>
-      <height>81</height>
+      <width>770</width>
+      <height>80</height>
      </rect>
     </property>
     <property name="font">
@@ -182,24 +182,6 @@
       <string>Файл с координатами поля и  фото участков поля загружаются в одном архиве</string>
      </property>
     </item>
-   </widget>
-   <widget class="QPushButton" name="btnInfo">
-    <property name="geometry">
-     <rect>
-      <x>1050</x>
-      <y>10</y>
-      <width>191</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Информация</string>
-    </property>
    </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
